--- a/Control/index.html
+++ b/Control/index.html
@@ -3,11 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" />
     <title>Gamepad</title>
   </head>
   <body>
     <div id="listGamepads"></div>
     <script src="script.js"></script>
+
+    <div class="container">
+        <button>Button 1</button>
+        <button>Button 2</button>
+      </div>
+    </div>
   </body>
 </html>
