feat: Add button images

--- a/RobotLocomotion/data/index.html
+++ b/RobotLocomotion/data/index.html
@@ -13,6 +13,10 @@
   <body>
     <h1>GAMEPADS</h1>
     <div id="listGamepads"></div>
+    <img src="images/up_outlined.png" alt="Up Arrow" />
+    <img src="images/down_outlined.png" alt="Down Arrow" />
+    <img src="images/left_outlined.png" alt="Left Arrow" />
+    <img src="images/right_outlined.png" alt="Right Arrow" />
   </body>
   <script>
     var websocket;
