feat: Add image file uploading to Arduino
- Added slash to enable Arduino to pass image to server
- Add list of image paths and add image handler

--- a/RobotLocomotion/data/index.html
+++ b/RobotLocomotion/data/index.html
@@ -13,10 +13,10 @@
   <body>
     <h1>GAMEPADS</h1>
     <div id="listGamepads"></div>
-    <img id="up-arrow" src="images/up_outlined.png" alt="Up Arrow" />
-    <img id="down-arrow" src="images/down_outlined.png" alt="Down Arrow" />
-    <img id="left-arrow" src="images/left_outlined.png" alt="Left Arrow" />
-    <img id="right-arrow" src="images/right_outlined.png" alt="Right Arrow" />
+    <img id="up-arrow" src="/images/up_outlined.png" alt="Up Arrow" />
+    <img id="down-arrow" src="/images/down_outlined.png" alt="Down Arrow" />
+    <img id="left-arrow" src="/images/left_outlined.png" alt="Left Arrow" />
+    <img id="right-arrow" src="/images/right_outlined.png" alt="Right Arrow" />
   </body>
   <script>
     var websocket;
